# IoT_Midterm

./: .dockerignore  .gitignore  docker-compose.yml  readme.md
publisher/: camera_test.c  docker-compose.snippet.yml  http_requester.py  publisher.py  readme.md  requirements.txt
server/: .dockerignore  Dockerfile  pyproject.toml  readme.md
server/app/: main.py
server/app/config/: mqtt.py  redis.py  settings.py
server/app/models/: base_entity.py  mqtt_broker.py  publisher.py
server/app/repository/: mqtt_repository.py  publisher_repository.py
server/app/routes/: api_routes.py  comon_routes.py  mqtt_routes.py
server/app/scheduler/: mqtt_checker.py  publisher_checker.py
server/app/schemas/: comon_schemas.py  mqtt_schemas.py
server/app/services/: comon_service.py  mqtt_service.py  mqtt_subscriber_service.py  publisher_service.py  video_stream_hub.py  video_stream_service.py
server/app/static/css/: app.css
server/app/templates/: index.html  status.html
server/c_subscriber/: Dockerfile  main.c
